@@ -667,6 +667,16 @@ static irop_t irops[] = {
   { DEFOP(Iop_QAdd16Sx8, UNDEF_UNKNOWN), },
   { DEFOP(Iop_QAdd32Sx4, UNDEF_UNKNOWN), },
   { DEFOP(Iop_QAdd64Sx2, UNDEF_UNKNOWN), },
+
+  { DEFOP(Iop_QAddExtUSsatSS8x16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QAddExtUSsatSS16x8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QAddExtUSsatSS32x4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QAddExtUSsatSS64x2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QAddExtSUsatUU8x16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QAddExtSUsatUU16x8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QAddExtSUsatUU32x4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QAddExtSUsatUU64x2, UNDEF_UNKNOWN), },
+
   { DEFOP(Iop_Sub8x16, UNDEF_UNKNOWN), },
   { DEFOP(Iop_Sub16x8, UNDEF_UNKNOWN), },
   { DEFOP(Iop_Sub32x4, UNDEF_UNKNOWN), },
@@ -814,6 +824,58 @@ static irop_t irops[] = {
   { DEFOP(Iop_QShlNsatSS16x8, UNDEF_UNKNOWN), },
   { DEFOP(Iop_QShlNsatSS32x4, UNDEF_UNKNOWN), },
   { DEFOP(Iop_QShlNsatSS64x2, UNDEF_UNKNOWN), },
+
+  { DEFOP(Iop_QandUQsh8x16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandUQsh16x8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandUQsh32x4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandUQsh64x2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandSQsh8x16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandSQsh16x8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandSQsh32x4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandSQsh64x2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandUQRsh8x16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandUQRsh16x8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandUQRsh32x4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandUQRsh64x2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandSQRsh8x16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandSQRsh16x8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandSQRsh32x4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandSQRsh64x2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Sh8Sx16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Sh16Sx8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Sh32Sx4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Sh64Sx2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Sh8Ux16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Sh16Ux8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Sh32Ux4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Sh64Ux2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Rsh8Sx16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Rsh16Sx8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Rsh32Sx4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Rsh64Sx2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Rsh8Ux16, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Rsh16Ux8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Rsh32Ux4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_Rsh64Ux2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQShrNnarrow16Uto8Ux8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQShrNnarrow32Uto16Ux4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQShrNnarrow64Uto32Ux2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQSarNnarrow16Sto8Sx8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQSarNnarrow32Sto16Sx4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQSarNnarrow64Sto32Sx2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQSarNnarrow16Sto8Ux8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQSarNnarrow32Sto16Ux4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQSarNnarrow64Sto32Ux2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQRShrNnarrow16Uto8Ux8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQRShrNnarrow32Uto16Ux4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQRShrNnarrow64Uto32Ux2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQRSarNnarrow16Sto8Sx8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQRSarNnarrow32Sto16Sx4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQRSarNnarrow64Sto32Sx2, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQRSarNnarrow16Sto8Ux8, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQRSarNnarrow32Sto16Ux4, UNDEF_UNKNOWN), },
+  { DEFOP(Iop_QandQRSarNnarrow64Sto32Ux2, UNDEF_UNKNOWN), },
+
   { DEFOP(Iop_QNarrowBin16Sto8Ux16, UNDEF_UNKNOWN), },
   { DEFOP(Iop_QNarrowBin32Sto16Ux8, UNDEF_UNKNOWN), },
   { DEFOP(Iop_QNarrowBin16Sto8Sx16, UNDEF_UNKNOWN), },
